--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">base</string>
     <string name="loading">Loading</string>
     <string name="ok">OK</string>
+    <string name="default_dialogue_title">Info</string>
 </resources>
